--- a/website/pages/account-store.html
+++ b/website/pages/account-store.html
@@ -323,7 +323,7 @@
                                                     style="padding: 12px 16px" data-bs-toggle="offcanvas"
                                                     data-bs-target="#edit-store" aria-controls="offcanvasRight">Edit
                                                     store</a>
-                                                <a href="#" class="view-market w-100 btn radius-100"
+                                                <a href="view-store.html" class="view-market w-100 btn radius-100"
                                                     style="padding: 12px 16px">View store</a>
                                             </div>
                                         </div>
@@ -365,7 +365,7 @@
                                                     style="padding: 12px 16px" data-bs-toggle="offcanvas"
                                                     data-bs-target="#edit-store" aria-controls="offcanvasRight">Edit
                                                     store</a>
-                                                <a href="#" class="view-market w-100 btn radius-100"
+                                                <a href="view-store.html" class="view-market w-100 btn radius-100"
                                                     style="padding: 12px 16px">View store</a>
                                             </div>
                                         </div>
