--- a/website/pages/create-store.html
+++ b/website/pages/create-store.html
@@ -33,7 +33,7 @@
             <div class="top-navbar mb-2">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                     <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="index.html">
                             <img src="../assets/images/logowhite.svg" alt="" class="img-fluid">
                         </a>
 
@@ -122,11 +122,11 @@
                                     <a class="nav-link d-flex dropdown-toggle" href="#" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="ri-user-line"></i></a>
-                                     <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
-                                                    </li>
-                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
-                                                </ul>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="account.html">My Profile</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -241,6 +241,7 @@
                                     <select name="" class="myselect form-select" id="thiselect">
                                         <option value="" selected disabled hidden>Select Business type</option>
                                         <option value="">Real Estate Agent</option>
+                                        <option value="">Handmade store</option>
                                     </select>
                                 </div>
                                 <div class="main-fields">
@@ -263,6 +264,73 @@
                                     <div class="mb-22">
                                         <label for="cinfo" class="mb-8">Contact information</label>
                                         <input type="number" class="custom-form">
+                                    </div>
+                                    <div class="mb-22">
+                                        <label for="cinfo" class="mb-8">Opening hours</label>
+                                        <input type="time" class="custom-form">
+                                    </div>
+                                    <div class="mb-22">
+                                        <label for="cinfo" class="mb-8">Closing hours</label>
+                                        <input type="time" class="custom-form">
+                                    </div>
+                                    <div class="mb-22">
+                                        <label for="cinfo" class="mb-8">Delivery</label>
+                                        <div class="d-flex gap-3">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="flexRadioDefault1">
+                                                <label class="form-check-label" style="font-size: 16px;font-weight: 600;
+                                                color:#1A1A1A;" for="flexRadioDefault1">
+                                                    Yes
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="flexRadioDefault2">
+                                                <label class="form-check-label" style="font-size: 16px;font-weight: 600;
+                                                color:#1A1A1A;" for="flexRadioDefault2">
+                                                    No
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="mb-22">
+                                        <label for="cinfo" class="mb-8">Delivery</label>
+                                        <div class="d-flex gap-3">
+                                            <!-- <div class="form-check">
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                    id="flexRadioDefault1">
+                                                <label class="form-check-label" style="font-size: 16px;font-weight: 600;
+                                                color:#1A1A1A;" for="flexRadioDefault1">
+                                                    Yes
+                                                </label>
+                                            </div> -->
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value=""
+                                                    id="flexCheckDefault">
+                                                <label class="form-check-label" style="font-size: 16px;font-weight: 600;
+                                                color:#1A1A1A;" for="flexCheckDefault">
+                                                    Cash
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value=""
+                                                    id="flexCheckDefault1">
+                                                <label class="form-check-label" style="font-size: 16px;font-weight: 600;
+                                                color:#1A1A1A;" for="flexCheckDefault1">
+                                                    Card
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value=""
+                                                    id="flexCheckDefault2">
+                                                <label class="form-check-label" style="font-size: 16px;font-weight: 600;
+                                                color:#1A1A1A;" for="flexCheckDefault2">
+                                                    Bank transfer
+                                                </label>
+                                            </div>
+
+                                        </div>
                                     </div>
                                     <div class="mb-22">
                                         <label for="storelogo" class="mb-8">Upload store logo/Icon</label>
