--- a/website/pages/about.html
+++ b/website/pages/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Store | Market Place</title>
+    <title>About | Market Place</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/fontawesome.css">
@@ -121,11 +122,11 @@
                                     <a class="nav-link d-flex dropdown-toggle" href="#" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="ri-user-line"></i></a>
-                                     <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
-                                                    </li>
-                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
-                                                </ul>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="account.html">My Profile</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -203,7 +204,7 @@
                         Instantly. <span><a href="#">Shop now</a></span>
                     </p>
                 </div>
-                <a href="#">
+                <a href="#" id="remove-ad">
                     <i class="fa-solid fa-circle-xmark"></i>
                 </a>
             </div>
