--- a/website/pages/account-store.html
+++ b/website/pages/account-store.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Store | Market Place</title>
+    <title>Account Store | Market Place</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/owl.min.css">
@@ -204,7 +205,7 @@
                         Instantly. <span><a href="#">Shop now</a></span>
                     </p>
                 </div>
-                <a href="#">
+             <a href="#" id="remove-ad">
                     <i class="fa-solid fa-circle-xmark"></i>
                 </a>
             </div>
