--- a/website/pages/create-store.html
+++ b/website/pages/create-store.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Store | Market Place</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/owl.min.css">
@@ -204,7 +205,7 @@
                         Instantly. <span><a href="#">Shop now</a></span>
                     </p>
                 </div>
-                <a href="#">
+                <a href="#" id="remove-ad">
                     <i class="fa-solid fa-circle-xmark"></i>
                 </a>
             </div>
@@ -295,7 +296,7 @@
                                         </div>
                                     </div>
                                     <div class="mb-22">
-                                        <label for="cinfo" class="mb-8">Delivery</label>
+                                        <label for="cinfo" class="mb-8">Payment type</label>
                                         <div class="d-flex gap-3">
                                             <!-- <div class="form-check">
                                                 <input class="form-check-input" type="radio" name="flexRadioDefault"
