--- a/website/pages/faq.html
+++ b/website/pages/faq.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Store | Market Place</title>
+    <title>FAQs | Market Place</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/fontawesome.css">
@@ -32,7 +33,7 @@
             <div class="top-navbar mb-2">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                     <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="index.html">
                             <img src="../assets/images/logowhite.svg" alt="" class="img-fluid">
                         </a>
 
@@ -121,11 +122,11 @@
                                     <a class="nav-link d-flex dropdown-toggle" href="#" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="ri-user-line"></i></a>
-                                     <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
-                                                    </li>
-                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
-                                                </ul>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="account.html">My Profile</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -203,7 +204,7 @@
                         Instantly. <span><a href="#">Shop now</a></span>
                     </p>
                 </div>
-                <a href="#">
+             <a href="#" id="remove-ad">
                     <i class="fa-solid fa-circle-xmark"></i>
                 </a>
             </div>
@@ -318,8 +319,7 @@
                             <div class="accordion-item mb-32">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapsesix" aria-expanded="true"
-                                        aria-controls="collapsesix">
+                                        data-bs-target="#collapsesix" aria-expanded="true" aria-controls="collapsesix">
                                         <h4 class="mb-0">Can I return an order?</h4>
                                     </button>
                                 </h2>
@@ -390,8 +390,7 @@
                             <div class="accordion-item mb-32">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseten" aria-expanded="true"
-                                        aria-controls="collapseten">
+                                        data-bs-target="#collapseten" aria-expanded="true" aria-controls="collapseten">
                                         <h4 class="mb-0">Do you have a Mobile App?</h4>
                                     </button>
                                 </h2>
