--- a/website/pages/productdetail.html
+++ b/website/pages/productdetail.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Store | Market Place</title>
+    <title>Product Details | Market Place</title>
+    <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/owl.min.css">
@@ -13,9 +14,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<style>
 
-</style>
 
 
 <body>
@@ -33,7 +32,7 @@
             <div class="top-navbar mb-2">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                     <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="index.html">
                             <img src="../assets/images/logowhite.svg" alt="" class="img-fluid">
                         </a>
 
@@ -122,11 +121,11 @@
                                     <a class="nav-link d-flex dropdown-toggle" href="#" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="ri-user-line"></i></a>
-                                     <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
-                                                    </li>
-                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
-                                                </ul>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="account.html">My Profile</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -204,7 +203,7 @@
                         Instantly. <span><a href="#">Shop now</a></span>
                     </p>
                 </div>
-                <a href="#">
+             <a href="#" id="remove-ad">
                     <i class="fa-solid fa-circle-xmark"></i>
                 </a>
             </div>
