--- a/website/pages/Authentication/create_account.html
+++ b/website/pages/Authentication/create_account.html
@@ -41,7 +41,7 @@
                             <div class="or-divider">OR</div>
                         </div>
                         <div class="form-container text-start mb-27">
-                            <form action="otp.html">
+                            <form action="verify-account.html">
                                 <div class="mb-27">
                                     <label for="name">Full Name</label>
                                     <input type="text" class="custom-form">
