--- a/website/pages/Authentication/verifywithnumber.html
+++ b/website/pages/Authentication/verifywithnumber.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | MarketPlace</title>
+    <title>Verify Account | MarketPlace</title>
+    <link rel="shortcut icon" href="../../assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../assets/css/login.css">
     <link rel="stylesheet" href="../../assets/css/fontawesome.css">
