--- a/website/pages/blog.html
+++ b/website/pages/blog.html
@@ -65,7 +65,8 @@
                                     </ul>
                                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                         <li class="nav-item" id="sell">
-                                            <a class="nav-link " aria-current="page" href="#"><i class="fa fa-plus"></i>
+                                            <a class="nav-link " aria-current="page" href="add_open_market.html"><i
+                                                    class="fa fa-plus"></i>
                                                 Sell</a>
                                         </li>
                                         <li class="nav-item ms-xl-4" id="profile">
