--- a/Admin/pages/email/send_link.html
+++ b/Admin/pages/email/send_link.html
@@ -65,8 +65,8 @@
                                     <table style="width: 650px; margin: 0 auto; margin-bottom: 10px">
                                         <tbody>
                                             <tr>
-                                                <td><img class="img-fluid" src="../../assets/images/logo/marketlogo.png"
-                                                        alt="logo"></td>
+                                                <td style="text-align: center;"><img class="img-fluid"
+                                                        src="../../assets/images/logo/marketlogo.png" alt="logo"></td>
                                             </tr>
                                         </tbody>
                                     </table>
