--- a/website/pages/store-draft.html
+++ b/website/pages/store-draft.html
@@ -217,11 +217,11 @@
                         <div class="specific-header d-flex align-items-center gap-2">
                             <p class="mb-0"><a href="index.html">Home</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
-                            <p class="mb-0"><a href="index.html">Profile</a></p>
+                            <p class="mb-0"><a href="account.html">Profile</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
-                            <p class="mb-0"><a href="index.html">My stores</a></p>
+                            <p class="mb-0"><a href="account-store.html">My stores</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
-                            <p class="mb-0"><a href="index.html">Stores</a></p>
+                            <p class="mb-0"><a href="store.html">Stores</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
                             <span class="mb-0"><a href="#">Draft</a></span>
                         </div>
