--- a/website/pages/afterlogin.html
+++ b/website/pages/afterlogin.html
@@ -274,7 +274,7 @@
                     </div>
                     <div class="col-lg-4 mb-3">
                         <div class="right-side-box  d-flex align-items-center flex-column justify-content-center">
-                            <div class="right-btn d-flex align-items-center justify-content-center mb-22">
+                            <div class="right-btn d-flex align-items-center justify-content-center mb-22 flex-wrap">
                                 <a href="./Authentication/create_account.html" class=" rounded-pill" type="button">
                                     Register
                                 </a>
