--- a/website/pages/create-store.html
+++ b/website/pages/create-store.html
@@ -372,7 +372,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="create-bg">
-                            <!-- <img src="../assets/images/create-bg.svg" alt="" class="img-fluid"> -->
+                            <img src="../assets/images/create-bg.svg" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
