--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -276,8 +276,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mb-3">
-                        <div class="right-side-box  d-flex align-items-center flex-column justify-content-center">
-                            <div class="right-btn d-flex align-items-center justify-content-center mb-22">
+                        <div class="right-side-box  d-flex align-items-center flex-column justify-content-center ">
+                            <div class="right-btn d-flex align-items-center justify-content-center mb-22 flex-wrap">
                                 <a href="./Authentication/create_account.html" class=" rounded-pill" type="button">
                                     Register
                                 </a>
