--- a/website/pages/view-store.html
+++ b/website/pages/view-store.html
@@ -220,9 +220,9 @@
                         <div class="specific-header d-flex align-items-center gap-2">
                             <p class="mb-0"><a href="index.html">Home</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
-                            <p class="mb-0"><a href="index.html">Profile</a></p>
+                            <p class="mb-0"><a href="account.html">Profile</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
-                            <p class="mb-0"><a href="index.html">My stores</a></p>
+                            <p class="mb-0"><a href="account-store.html">My stores</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
                             <span class="mb-0"><a href="#">Cars Stand</a></span>
                         </div>
