--- a/website/pages/terms.html
+++ b/website/pages/terms.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Password | Market Place</title>
+    <title>Blogs Details | Market Place</title>
     <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/owl.min.css">
     <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/owl.min.css">
     <link rel="stylesheet" href="../assets/css/remixicon.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -37,13 +37,6 @@
                         <a class="navbar-brand" href="index.html">
                             <img src="../assets/images/logowhite.svg" alt="" class="img-fluid">
                         </a>
-
-                        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                            <span class="navbar-toggler-icon"></span>
-                        </button> -->
-
-
 
                         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
                             aria-labelledby="offcanvasExampleLabel">
@@ -150,7 +143,7 @@
                                 <div class="collapse navbar-collapse show justify-content-center flex-wrap"
                                     id="navbarSupportedContent">
                                     <div class="dropdown-container">
-                                        <select name="category" id="category" class="dropdown-category">
+                                        <select name="category" id="category" class="dropdown-category ">
                                             <option value="">All Category</option>
                                             <option value="">Option 1</option>
                                             <option value="">Option 2</option>
@@ -207,108 +200,61 @@
                         Instantly. <span><a href="#">Shop now</a></span>
                     </p>
                 </div>
-             <a href="#" id="remove-ad">
+                <a href="#" id="remove-ad">
                     <i class="fa-solid fa-circle-xmark"></i>
                 </a>
             </div>
         </div>
 
-        <section class="my_account ">
-            <div class="container-fluid">
-                <div class="row ">
-                    <div class="col-lg-3 py-30px myCard" id="col-3">
-                        <div class="card px-26px border-0">
-                            <nav class="navbar navbar-expand-lg d-block w-100">
-                                <div class="">
-                                    <div class="header-account w-100 mb-12">
-                                        <button class="navbar-toggler border-0 px-0" type="button"
-                                            data-bs-toggle="offcanvas" data-bs-target="#account_nav"
-                                            aria-controls="offcanvasExample">
-                                            <i class="ri-menu-2-line"></i>
-                                        </button>
-                                        <h4>My account</h4>
-                                        <hr style="border-color: #E7E7E7;margin-top: 0;">
-                                    </div>
-                                    <div class="offcanvas offcanvas-start" tabindex="-1" id="account_nav"
-                                        aria-labelledby="offcanvasExampleLabel">
-                                        <div class="offcanvas-header">
-                                            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Account</h5>
-                                            <button type="button" class="btn-close" style="background: none !important;"
-                                                data-bs-dismiss="offcanvas" aria-label="Close">
-                                                <i class="fa fa-times text-white"></i></button>
-
-                                        </div>
-                                        <div class="offcanvas-body d-block">
-                                            <div class="collapse show d-block" id="navbarSupportedContent">
-                                                <ul class="mytabs ps-0">
-                                                    <li class="w-100  mb-12">
-                                                        <a href="account.html" class="custom-links"><i
-                                                                class="ri-user-line"></i> My profile</a>
-                                                    </li>
-                                                    <li class="w-100  mb-12">
-                                                        <a href="message.html" class="custom-links"><i
-                                                                class="ri-chat-1-line"></i> Message</a>
-                                                    </li>
-                                                    <li class="w-100  mb-12">
-                                                        <a href="account-store.html" class="custom-links"><i
-                                                                class="ri-store-line"></i> My stores</a>
-                                                    </li>
-                                                    <li class="w-100  mb-12">
-                                                        <a href="community.html" class="custom-links"><i
-                                                                class="ri-group-line"></i> Community</a>
-                                                    </li>
-                                                    <li class="w-100 active mb-12">
-                                                        <a href="change-password.html" class="custom-links"><i
-                                                                class="ri-shield-keyhole-line"></i> Change Password</a>
-                                                    </li>
-                                                    <li class="w-100  mb-12">
-                                                        <a href="support.html" class="custom-links"><i
-                                                                class="ri-questionnaire-line"></i> Support</a>
-                                                    </li>
-                                                </ul>
-                                                <div class="virtual-space">
-                                                    <h5>You too can own a Virtual store with us</h5>
-                                                    <p>Learn how you can also list your product to gain customer
-                                                        visibility</p>
-                                                    <a href="create-store.html" class="btn btn-market radius-100 d-flex"
-                                                        style="width: fit-content;">Get a store space</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </nav>
-                        </div>
-
-                    </div>
-                    <div class="col-lg-9 py-30px" id="col-9">
-                        <div class="main-info px-26px">
-                            <h4 class="mb-22">Change Password</h4>
-                            <div class="card myCard border-0 p-22px"
-                                style="border: 1px solid #F0F4FF;border-radius: 12px !important;">
-                                <form action="change-password.html">
-                                    <div class="mb-22">
-                                        <label for="opass" class="mb-8">Old Password</label>
-                                        <input type="password" class="custom-form" id="opass" name="opass">
-                                    </div>
-                                    <div class="mb-22">
-                                        <label for="npass" class="mb-8">New Password</label>
-                                        <input type="password" class="custom-form" id="npass" name="npass">
-                                    </div>
-                                    <div class="mb-22">
-                                        <label for="cpass" class="mb-8">Confirm Password</label>
-                                        <input type="password" class="custom-form" id="cpass" name="cpass">
-                                    </div>
-
-
-                                    <div class="mb-22">
-                                        <button class="btn btn-market radius-100" type="submit">Save</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+        <section class="pr py-50" style="background-color: #fcfffc;">
+            <div class="container">
+                <div class="blog-heading  mb-32">
+                    <h4>Terms and Conditions for Marketplace</h4>
+                </div>
+                <div class="terms-detail">
+                    <p><b>1. Introduction</b>
+                        <br>
+                        <br>
+                        Welcome to [Your E-commerce Marketplace] ("Marketplace"). These terms and conditions ("Terms")
+                        govern your use of our Marketplace and the services we provide. By accessing or using the
+                        Marketplace, you agree to be bound by these Terms. If you do not agree with any part of these
+                        Terms, you must not use our Marketplace.
+                        <br>
+                        <br>
+                        <b>2. Definitions</b>
+                        <br>
+                        <br>
+                        - Marketplace: The online platform operated by [Your Company Name] that allows users to buy and
+                        sell products.
+                        -User: Any person or entity using the Marketplace, including buyers and sellers.
+                        - Buyer: A User who purchases products from the Marketplace.
+                        - Seller: A User who lists and sells products on the Marketplace.
+                        - Products: Goods or services listed for sale on the Marketplace.
+                        <br>
+                        <br>
+                        <b>3. Eligibility</b>
+                        <br>
+                        <br>
+                        To use the Marketplace, you must be at least 18 years old and capable of entering into a legally
+                        binding contract. By using the Marketplace, you represent and warrant that you meet these
+                        eligibility requirements.
+                        <br>
+                        <br>
+                        <b>4. Eligibility</b>
+                        <br>
+                        <br>
+                        To use the Marketplace, you must be at least 18 years old and capable of entering into a legally
+                        binding contract. By using the Marketplace, you represent and warrant that you meet these
+                        eligibility requirements.
+                        <br>
+                        <br>
+                        <b>5. Eligibility</b>
+                        <br>
+                        <br>
+                        To use the Marketplace, you must be at least 18 years old and capable of entering into a legally
+                        binding contract. By using the Marketplace, you represent and warrant that you meet these
+                        eligibility requirements.
+                    </p>
                 </div>
             </div>
         </section>
