--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -175,7 +175,8 @@
                                     </div> -->
                                     <ul class="navbar-nav ms-xl-auto mb-2 mb-lg-0 ">
                                         <li class="nav-item ms-22">
-                                            <a class="nav-link " aria-current="page" href="#">Exclusive store</a>
+                                            <a class="nav-link " aria-current="page"
+                                                href="exclusive-store.html">Exclusive store</a>
                                         </li>
                                         <li class="nav-item ms-22">
                                             <a class="nav-link" href="#">Handmade products</a>
@@ -1172,7 +1173,7 @@
                 <div class="blog-heading text-center mb-22">
                     <h4>Our Blogs</h4>
                 </div>
-                <div class="row">
+                <div class="row mb-22">
                     <div class="col-lg-4 mb-4">
                         <a href="blog.html">
                             <div class="card">
@@ -1281,6 +1282,9 @@
                             </div>
                         </a>
                     </div>
+                </div>
+                <div class="text-center">
+                    <a href="blog.html" class="see-all ">See All <i class="ri-arrow-right-line"></i></a>
                 </div>
             </div>
         </section>
